修复 列表单选没有回调问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MaterialPreference</string>
+    <string name="title_sensitivity">灵敏度</string>
 </resources>
